<resources>
  <string name="app_name">CanteenApp</string>
  <string name="title_activity_buttom_navgation">MainActivity</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="SHOW">SHOW</string>
  <string name="title_activity_admin_navigatoin">AdminNavigation</string>
  <string name="tab_text_1">Tab 1</string>
  <string name="tab_text_2">Tab 2</string>
  <string name="foodname">Foodname</string>
  <string name="foodprize">Foodprize</string>
  <string name="foodpictureurl">FoodpictureURL</string>
  <string name="done">DONE</string>
  <string name="add_new_food">ADD NEW FOOD</string>
  <string name="log_s_for_the_day">Log\'s for the day</string>
  <string name="digital_canteen">Digital Canteen</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="show">SHOW</string>
  <string name="forgot_password">forgot password?</string>
  <string name="login">LOGIN</string>
  <string name="check_again">Check Again</string>
  <string name="ordered_item_list">Ordered Item List</string>
  <string name="full_name">Full Name</string>
  <string name="phone">Phone</string>
  <string name="signup">SIGNUP</string>
  <string name="start">start</string>
  <string name="end">end</string>
  <string name="filter">FILTER</string>
  <string name="hey_admin">Hey ,Admin 👋</string>
  <string name="today_s_income">Today\'s Income</string>
  <string name="rs">Rs.</string>
  <string name="order">Order</string>
  <string name="help_s_you_to_view_of_order_for_the_day">Help\'s you to view of order for the day</string>
  <string name="food">Food</string>
  <string name="help_s_you_to_add_new_food_for_the_users">Help\'s you to add new food for the users</string>
  <string name="user">User</string>
  <string name="help_s_you_add_new_user_to_system">Help\'s you add new user to system</string>
  <string name="log">Log</string>
  <string name="help_s_you_look_for_log_of_the_day">Help\'s you look for log of the day</string>
  <string name="analysis">Analysis</string>
  <string name="qr">QR scan</string>
  <string name="help_s_you_analysis_your_business">Help\'s you analysis your business</string>
  <string name="help_s_you_scan_qr_for_order">Help\'s you to easily scan order with QR code</string>
  <string name="your_basket">Your Basket</string>
  <string name="total_amount">Total Amount</string>
  <string name="confirm_order">CONFIRM ORDER</string>
  <string name="remove">REMOVE</string>
  <string name="dashboard">Dashboard</string>
  <string name="token_no">TOKEN NO:</string>
  <string name="cancel">Cancel</string>
  <string name="pay">PAY</string>
  <string name="your_order_is_ready">Your order is ready</string>
  <string name="hey">HEY,</string>
  <string name="what_do_you_want_to_eat_today">what do you want to eat today?</string>
  <string name="upload_a_picture">Upload a Picture</string>
  <string name="weekly">Weekly</string>
  <string name="monthly">Monthly</string>
  <string name="yearly">Yearly</string>
  <string name="expenses_for_food">Expenses for food</string>
  <string name="logout">Logout</string>
  <string name="reset">RESET</string>
  <string name="rs_0">Rs.0</string>
  <string name="_0">0</string>
  <string name="ready">Ready</string>
  <string name="scan_this_code_to_process_you_order">Scan this code to process you order</string>
</resources>