<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                tools:context=".FoodList.Food">

  <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerfood"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>

  <RelativeLayout
          android:id="@+id/hiddenrelative"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:background="@color/white">

    <EditText
            android:id="@+id/setFoodname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/foodname"
            android:textColor="@color/appBlack"
            android:textColorHint="@color/appBlack"
            android:textSize="24sp"/>

    <EditText
            android:id="@+id/setFoodprize"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/setFoodname"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/foodprize"
            android:textColor="@color/appBlack"
            android:textColorHint="@color/appBlack"
            android:textSize="24sp"/>

    <EditText
            android:id="@+id/setFoodpicture"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/setFoodprize"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/foodpictureurl"
            android:textColor="@color/appBlack"
            android:textColorHint="@color/appBlack"
            android:textSize="24sp"/>

    <Button
            android:id="@+id/DONefOOD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setFoodpicture"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rectangele"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/done"
            android:textColor="@color/white"/>
  </RelativeLayout>
  <Button
          android:fontFamily="@font/poppinsmedium"
          android:textColor="@color/white"
          android:background="@drawable/rounded_rectangele"
          android:layout_marginBottom="10dp"
          android:layout_centerInParent="true"
          android:id="@+id/addnewfood"
          android:layout_alignParentBottom="true"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/add_new_food"></Button>
</RelativeLayout>