<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical"
              tools:context=".Registration.Registration">

  <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="12dp"
          android:orientation="vertical">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@mipmap/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/digital_canteen"
            android:textColor="@color/textPrimaryColor"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@+id/Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

      <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:orientation="vertical">

        <EditText
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/white_curve"
                android:backgroundTint="@color/appBlack"
                android:fontFamily="@font/poppinslight"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="60"
                android:paddingLeft="20dp"
                android:textColor="#ffff"
                android:textColorHint="#ffff"/>

        <EditText
                android:id="@+id/Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_curve"
                android:backgroundTint="@color/appBlack"
                android:fontFamily="@font/poppinslight"
                android:hint="@string/password"
                android:inputType="text"
                android:maxLength="18"
                android:paddingLeft="20dp"
                android:textColor="#ffff"
                android:textColorHint="#ffff"/>

        <EditText
                android:id="@+id/Fullname"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_curve"
                android:backgroundTint="@color/appBlack"
                android:fontFamily="@font/poppinslight"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLength="60"
                android:paddingLeft="20dp"
                android:textColor="#ffff"
                android:textColorHint="#ffff"/>

        <EditText
                android:id="@+id/Phone"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:background="@drawable/white_curve"
                android:backgroundTint="@color/appBlack"
                android:fontFamily="@font/poppinslight"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingLeft="20dp"
                android:textColor="#ffff"
                android:textColorHint="#ffff"/>

        <Button
                android:id="@+id/signup"
                android:layout_width="325dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_rectangele"
                android:backgroundTint="@color/green"
                android:text="@string/signup"
                android:textColor="#FFFFFF"/>
      </LinearLayout>

      <ProgressBar
              android:id="@+id/progressBarReg"
              style="?android:attr/progressBarStyle"
              android:layout_width="112dp"
              android:layout_height="89dp"
              android:layout_gravity="center_horizontal|center_vertical"
              android:indeterminateTint="@color/green"/>

    </FrameLayout>
  </LinearLayout>


</LinearLayout>