<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

  <androidx.cardview.widget.CardView
          android:id="@+id/cardviewfororderlist"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="12dp"
          android:elevation="24dp"
          app:cardBackgroundColor="@color/white"
          app:cardCornerRadius="20dp"
          app:cardMaxElevation="36dp">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

      <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">


        <TextView
                android:id="@+id/tokenNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/token_no"
                android:textColor="@color/green"
                android:textSize="12dp"/>

        <TextView
                android:id="@+id/tokenadmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/tokenNo"
                android:fontFamily="@font/poppinsmedium"
                android:text=""
                android:textColor="@color/green"
                android:textSize="12dp"/>


      </RelativeLayout>

      <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">

        <TextView
                android:id="@+id/usersnameorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/poppinsmedium"
                android:text=""
                android:textColor="@color/textPrimaryColor"
                android:textSize="12dp"/>

        <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text=""
                android:textColor="#000000"
                android:textSize="12dp"/>


      </RelativeLayout>

      <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="horizontal">

        <TextView
                android:id="@+id/foodnameorser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="4"
                android:fontFamily="@font/poppinsmedium"
                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/textSecondaryColor"
                android:textSize="16dp"/>

        <TextView
                android:id="@+id/foodcountorder"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsmedium"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/textSecondaryColor"
                android:textSize="16dp"/>

        <TextView
                android:id="@+id/foodprizeorder"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="2"
                android:fontFamily="@font/poppinsmedium"
                android:text=""
                android:textColor="@color/textSecondaryColor"
                android:textSize="16dp"/>
      </LinearLayout>

      <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="12dp"
              android:layout_marginRight="12dp"
              android:orientation="horizontal">

        <TextView
                android:id="@+id/orderTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/total_amount"
                android:textColor="@color/textPrimaryColor"
                android:textSize="18dp"/>

        <TextView
                android:id="@+id/rsname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/totalprizeorder"
                android:layout_weight="0.1"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/rs"
                android:textAlignment="textEnd"
                android:textColor="@color/textPrimaryColor"
                android:textSize="18dp"/>

        <TextView
                android:id="@+id/totalprizeorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_weight="2"
                android:fontFamily="@font/poppinsbold"
                android:textAlignment="textStart"
                android:textColor="@color/textPrimaryColor"
                android:textSize="18dp"/>

      </RelativeLayout>


      <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"


              android:orientation="horizontal">

        <Button
                android:id="@+id/donebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_rectangele"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/done"
                android:textColor="#FFFFFF"/>

        <Button
                android:id="@+id/orderredy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/rounded_rectangele"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/ready"
                android:textColor="#FFFFFF"/>

        <Button
                android:id="@+id/orderCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/rounded_rectangele"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"/>
      </LinearLayout>

      <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="10dp"/>
    </LinearLayout>
  </androidx.cardview.widget.CardView>

</LinearLayout>