<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical">

  <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginRight="8dp"
          android:orientation="horizontal">

    <TextView
            android:id="@+id/textViewStart"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonDateStart"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppinsmedium"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/textPrimaryColor"
            android:textSize="12sp"

    />

    <TextView

            android:id="@+id/textViewEnd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonDateStart"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppinsmedium"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/textPrimaryColor"
            android:textSize="12sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:fontFamily="@font/poppinsmedium"
            android:textColor="@color/textPrimaryColor"/>
  </LinearLayout>

  <RelativeLayout

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp">


    <Button
            android:id="@+id/buttonDateStart"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="@drawable/confrim_button"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/start"
            android:textColor="@color/white"/>


    <Button
            android:id="@+id/buttonDateEnd"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/buttonDateStart"
            android:background="@drawable/confrim_button"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/end"
            android:textColor="@color/white"/>

    <Button
            android:id="@+id/buttonDateInBetween"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"

            android:background="@drawable/confrim_button"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/filter"
            android:textColor="@color/white"/>
  </RelativeLayout>

  <com.anychart.AnyChartView
          android:id="@+id/any_chart_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/background">

    <ProgressBar
            android:id="@+id/progressBarAdminFilter"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal|center_vertical"/>
  </com.anychart.AnyChartView>

</LinearLayout>